/add project separating But dont works

--- a/AvaloniaTestOpeningDialog/AvaloniaTestOpeningDialog.csproj
+++ b/AvaloniaTestOpeningDialog/AvaloniaTestOpeningDialog.csproj
@@ -25,4 +25,8 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ViewModels\ViewModels.csproj" />
+  </ItemGroup>
 </Project>
